Add endpoints security for LinkUp API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 spring.application.name=LinkUpAPI
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/job_platform
-spring.datasource.username=postgres
-spring.datasource.password=your_password
+# Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-jwt.secret=your-secret-key-here
-jwt.expiration=86400000
+# JWT Configuration (handled in code via @Value)
 
-spring.security.oauth2.client.registration.google.client-id=your-google-client-id
-spring.security.oauth2.client.registration.google.client-secret=your-google-client-secret
+# OAuth2 Configuration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
-spring.security.oauth2.client.registration.linkedin.client-id=your-linkedin-client-id
-spring.security.oauth2.client.registration.linkedin.client-secret=your-linkedin-client-secret
+spring.security.oauth2.client.registration.linkedin.client-id=${LINKEDIN_CLIENT_ID}
+spring.security.oauth2.client.registration.linkedin.client-secret=${LINKEDIN_CLIENT_SECRET}
 spring.security.oauth2.client.registration.linkedin.scope=r_liteprofile,r_emailaddress
